--- a/starter.html
+++ b/starter.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 </head>
-<body class="sidebar-dark sidebar-icon-only sidebar-absolute">
+<body class="sidebar-dark">
     <div class="container-scroller">
         <nav class="navbar navbar-primary col-lg-12 col-12 p-0 d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center" style="background: #3498db;">
